# l2o-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Ordhook.toml  README.md  docker-compose.yml
kvq/: Cargo.toml  README.md
kvq/src/: base_types.rs  lib.rs  traits.rs
kvq/src/adapters/: mod.rs  standard.rs
kvq/src/memory/: simple.rs
l2o-indexer-PoC/: Cargo.toml  README.md
l2o-indexer-PoC/assets/: deploy.json  example.vkey.json  example_proof.json
l2o-indexer-PoC/src/: main.rs
l2o-indexer-PoC/src/l2o/: inscription.rs  mod.rs
l2o-indexer-PoC/src/proof/: mod.rs  snarkjs.rs
l2o_cli/: Cargo.toml
l2o_cli/src/: error.rs  main.rs  subcommand.rs
l2o_cli/src/circuits/: mod.rs
l2o_cli/src/subcommand/: indexer.rs  indexer_ordhook.rs  indexer_poc.rs  initializer.rs  sequencer.rs
l2o_common/: Cargo.toml  README.md
l2o_common/src/: cli.rs  error.rs  lib.rs  logger.rs
l2o_common/src/common/data/: hash.rs  mod.rs  signature.rs
l2o_common/src/standards/: mod.rs
l2o_common/src/standards/brc20/: deploy.rs  mint.rs  mod.rs  op.rs  transfer.rs
l2o_common/src/standards/brc21/actions/: l2deposit.rs  l2withdraw.rs  mod.rs  transfer.rs
l2o_common/src/standards/l2o_a/: mod.rs  supported_crypto.rs
l2o_common/src/standards/l2o_a/actions/: block.rs  deploy.rs  mod.rs
l2o_crypto/: Cargo.toml  README.md
l2o_crypto/examples/: generate_zero_hashes.rs  poseidon_goldilocks.rs  sha256_merkle.rs
l2o_crypto/src/: lib.rs
l2o_crypto/src/fields/goldilocks/: hash.rs  mod.rs
l2o_crypto/src/hash/: mod.rs  traits.rs
l2o_crypto/src/hash/hash_functions/: blake3.rs  block_hasher.rs  keccack256.rs  keccak256.rs  mod.rs  poseidon_goldilocks.rs  sha256.rs  zero_hashes.rs
l2o_crypto/src/hash/merkle/: core.rs  mod.rs  traits.rs
l2o_crypto/src/hash/merkle/store/: key.rs  mod.rs  model.rs
l2o_crypto/src/proof/: mod.rs
l2o_crypto/src/proof/groth16/: mod.rs
l2o_crypto/src/proof/groth16/bn128/: mod.rs  proof_data.rs  verifier_data.rs
l2o_crypto/src/proof/plonky2/: mod.rs
l2o_crypto/src/proof/plonky2/poseidon_goldilocks/: mod.rs
l2o_crypto/src/signature/: mod.rs  schnorr.rs
l2o_crypto/src/standards/: mod.rs
l2o_crypto/src/standards/l2o_a/: mod.rs  proof.rs
l2o_derive/: Cargo.toml
l2o_indexer/: Cargo.toml  README.md
l2o_indexer/assets/: block.json  brc20-mint.json
l2o_indexer/src/: ctx.rs  error.rs  fetcher.rs  lib.rs  rpc_server.rs  table.rs
l2o_indexer/src/standards/: mod.rs
l2o_indexer/src/standards/brc20/: inscription.rs
l2o_indexer/src/standards/brc21/: inscription.rs
l2o_indexer/src/standards/l2o_a/: inscription.rs
l2o_indexer/src/store/: tables.rs
l2o_indexer_ordhook/: Cargo.toml  README.md
l2o_indexer_ordhook/assets/: block.json  brc20-deploy.json  brc20-transfer.json  deploy.json  example.vkey.json  example_proof.json  example_vkey.json  l2deposit.json  l2withdraw.json
l2o_indexer_ordhook/src/: lib.rs
l2o_indexer_ordhook/src/l2o/: inscription.rs
l2o_indexer_ordhook/src/proof/: snarkjs.rs
l2o_indexer_ordhook/src/rpc/: block_number.rs  mod.rs  request.rs  response.rs
l2o_indexer_ordhook/src/standards/brc21/: mod.rs
l2o_indexer_poc/: Cargo.toml  README.md
l2o_indexer_poc/src/: lib.rs
l2o_indexer_poc/src/l2o/: inscription.rs
l2o_indexer_poc/src/proof/: mod.rs  snarkjs.rs
l2o_macros/: Cargo.toml
l2o_macros/src/: lib.rs
l2o_ord/: Cargo.toml  README.md
l2o_ord/src/: action.rs  chain.rs  decimal.rs  decimal_sat.rs  degree.rs  epoch.rs  error.rs  hasher.rs  height.rs  lib.rs  media.rs  rarity.rs  sat.rs  sat_point.rs  script_key.rs  tag.rs  test_helpers.rs  tick.rs
l2o_ord/src/inscription/: envelope.rs  inscription.rs  inscription_id.rs  mod.rs
l2o_ord/src/operation/: deploy.rs  mint.rs  mod.rs  transfer.rs
l2o_ord/src/operation/brc20/: deploy.rs  mint.rs  mod.rs  transfer.rs
l2o_ord/src/operation/brc21/: l2deposit.rs  l2withdraw.rs  mod.rs
l2o_ord/src/operation/l2o_a/: block.rs  deploy.rs  mod.rs
l2o_ord/src/serde_helpers/: mod.rs
l2o_ord_store/: Cargo.toml  README.md
l2o_ord_store/src/: balance.rs  charm.rs  ctx.rs  entry.rs  event.rs  executor.rs  index.rs  lib.rs  log.rs  lru.rs  reader.rs  reorg.rs  resolver.rs  rtx.rs  script_key.rs  statistic.rs  table.rs  tick.rs  token_info.rs  writer.rs  wtx.rs
l2o_rpc/: Cargo.toml
l2o_rpc/src/: lib.rs  request.rs  response.rs
l2o_rpc_provider/: Cargo.toml
l2o_rpc_provider/src/: lib.rs
l2o_rpc_provider/src/rpc/: request.rs  response.rs
l2o_store/: Cargo.toml
l2o_store/src/: lib.rs
l2o_store/src/core/: mod.rs  store.rs  table_key.rs  tables.rs  traits.rs
l2o_store_leveldb/: Cargo.toml
l2o_store_redb/: Cargo.toml
l2o_store_redb/src/: lib.rs
l2o_store_rocksdb/: Cargo.toml
l2o_store_rocksdb/src/: lib.rs
l2o_utils/: Cargo.toml
static/: block.json  brc21-deploy.json  brc21-mint.json  brc21-transfer.json  deploy.json  l2deposit.json  l2withdraw.json
