[workspace]
members = [
  "l2o_common",
  "kvq",
  "l2o_crypto",
  "l2o_store",
  "l2o_store_rocksdb",
  "l2o_indexer",
  "l2o_indexer_ordhook",
  "l2o_cli",
]
resolver = "2"

[workspace.dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = [
  "r1cs",
  "crh",
  "snark",
  "parallel",
] }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.0", features = ["parallel"] }
ark-groth16 = { version = "0.4.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.4.0", features = ["parallel"] }
ark-relations = { version = "0.4.0" }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-snark = "0.4.0"
ark-std = { version = "0.4.0", features = ["parallel"] }
async-channel = "2.2.0"
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
blake3 = "1.5.0"
bytes = "1"
chainhook-sdk = "0.12.6"
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
indexer-sdk = { git = "https://github.com/GopherJ/indexer-sdk", branch = "main" }
k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }
musig2 = { version = "0.0.4", default-features = false, features = [
  "k256",
  "serde",
] }
num-traits = "0.2.18"
once_cell = "1.19.0"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "bfcfcdb498d253ff33121dba03a130be89fcc96c", default-features = false, features = [
  "std",
] }
rand = "0.8"
rand_core = "0.6.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls",
] }
rocksdb = { version = "0.21.0", features = ["serde", "multi-threaded-cf"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
