[workspace]
members = [
  "l2o_common",
  "kvq",
  "l2o_crypto",
  "l2o_store",
  "l2o_store_rocksdb",
  "l2o_indexer",
  "l2o_rpc_provider",
  # "l2o_cli",
  "l2o_macros",
  "l2o_derive",
  "l2o_store_redb",
  "l2o_ord",
  "l2o_ord_store",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = [
  "r1cs",
  "crh",
  "snark",
  "parallel",
] }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.0", features = ["parallel"] }
ark-groth16 = { version = "0.4.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.4.0", features = ["parallel"] }
ark-relations = { version = "0.4.0" }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-snark = "0.4.0"
ark-std = { version = "0.4.0", features = ["parallel"] }
async-trait = { version = "0.1.80" }
base64 = "0.21.0"
bigdecimal = { version = "0.4.3" }
bitcoin = { version = "0.31.1", features = ["serde", "rand"] }
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
blake3 = "1.5.0"
brotli = "3.4.0"
bytes = "1"
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.6"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }
lazy_static = "1.4.0"
mp4 = "0.14.0"
musig2 = { version = "0.0.4", default-features = false, features = [
  "k256",
  "serde",
] }
num-traits = "0.2.18"
num_bigint = { version = "0.4.4" }
once_cell = "1.19.0"
ord-bitcoincore-rpc = "0.17.1"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "bfcfcdb498d253ff33121dba03a130be89fcc96c", default-features = false, features = [
  "std",
] }
pretty_assertions = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rand_core = "0.6.0"
rayon = { version = "1.10.0" }
redb = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls",
  "blocking",
] }
rmp-serde = "1.2.0"
rocksdb = { version = "0.21.0", features = ["serde", "multi-threaded-cf"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
tempfile = "3.10.1"
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
