[package]
edition = "2021"
name    = "kvq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"

anyhow     = "1.0.75"
serde      = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }

plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "bfcfcdb498d253ff33121dba03a130be89fcc96c", default-features = false, features = [
  "std",
] }
