[package]
edition = "2021"
name    = "kvq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = { workspace = true }
hex        = { workspace = true }
l2o_macros = { path = "../l2o_macros" }
plonky2    = { workspace = true }
serde      = { workspace = true }
serde_with = { workspace = true }
