[package]
edition = "2021"
name    = "l2o-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = { workspace = true }
ark-bn254             = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-ff                = { workspace = true }
ark-groth16           = { workspace = true }
ark-r1cs-std          = { workspace = true }
ark-relations         = { workspace = true }
ark-std               = { workspace = true }
bitcoincore-rpc       = { workspace = true }
clap                  = { workspace = true }
dotenv                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
l2o-indexer           = { path = "../l2o_indexer" }
l2o_common            = { path = "../l2o_common" }
l2o_crypto            = { path = "../l2o_crypto" }
l2o_ord               = { path = "../l2o_ord" }
l2o_rpc_provider      = { path = "../l2o_rpc_provider" }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
