[package]
edition = "2021"
name    = "l2o_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
hex = "0.4.3"
k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }
kvq = { path = "../kvq" }
musig2 = { version = "0.0.4", default-features = false, features = [
  "k256",
  "serde",
] }
num-traits = "0.2.18"
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
thiserror = "1.0.50"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
