[package]
edition = "2021"
name    = "l2o_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
ark-bn254          = { workspace = true }
ark-ff             = { workspace = true }
clap               = { workspace = true }
hex                = { workspace = true }
k256               = { workspace = true }
kvq                = { path = "../kvq" }
musig2             = { workspace = true }
num-traits         = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_with         = { workspace = true }
strum              = { workspace = true }
thiserror          = { workspace = true }
tracing-subscriber = { workspace = true }
