[package]
name = "l2o_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"

serde = {version = "1.0.193", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["hex"] }
serde_json = "1.0"

ark-serialize = {version = "0.4.2", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-snark = "0.4.0"
ark-ec = "0.4.2"
ark-groth16 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge", "std", "signature"] }


plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "bfcfcdb498d253ff33121dba03a130be89fcc96c", default-features = false, features = ["std"] }


blake3 = "1.5.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
anyhow = "1.0.75"

k256 = { version = "0.13.2", features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std", "serde"] }
rand_core = "0.6.0"
musig2 = { version = "0.0.4", default-features = false, features = ["k256", "serde"] }
l2o_common = { path = "../l2o_common" }
kvq = { path = "../kvq" }


[dev-dependencies]
