[package]
edition = "2021"
name    = "l2o_crypto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = { workspace = true }
ark-bn254             = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-ec                = { workspace = true }
ark-groth16           = { workspace = true }
ark-serialize         = { workspace = true }
ark-snark             = { workspace = true }
blake3                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
kvq                   = { path = "../kvq" }
l2o_common            = { path = "../l2o_common" }
musig2                = { workspace = true }
plonky2               = { workspace = true }
rand_core             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
serde_with            = { workspace = true }
sha2                  = { workspace = true }
sha3                  = { workspace = true }
strum                 = { workspace = true }
tracing               = { workspace = true }

[[example]]
name = "generate_zero_hashes"

[[example]]
name = "poseidon_goldilocks"

[[example]]
name = "sha256_merkle"
