[package]
edition = "2021"
name    = "l2o_indexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix              = { workspace = true }
actix-cors         = { workspace = true }
actix-web          = { workspace = true }
actix-web-actors   = { workspace = true }
anyhow             = { workspace = true }
async-channel      = { workspace = true }
bitcoincore-rpc    = { workspace = true }
futures            = { workspace = true }
indexer-sdk        = { workspace = true }
once_cell          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-log        = { workspace = true }
tracing-subscriber = { workspace = true }
