[package]
edition = "2021"
name    = "l2o-indexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow               = { workspace = true }
ark-bn254            = { workspace = true }
ark-ec               = { workspace = true }
ark-groth16          = { workspace = true }
ark-serialize        = { workspace = true }
ark-snark            = { workspace = true }
bitcoin              = { workspace = true }
bitcoincore-rpc      = { workspace = true }
bitcoincore-rpc-json = { workspace = true }
bytes                = { workspace = true }
chainhook-sdk        = { workspace = true }
futures              = { workspace = true }
hex                  = { workspace = true }
http-body-util       = { workspace = true }
hyper                = { workspace = true }
hyper-util           = { workspace = true }
l2o_common           = { path = "../l2o_common" }
l2o_crypto           = { path = "../l2o_crypto" }
l2o_rpc_provider     = { path = "../l2o_rpc_provider" }
l2o_store            = { path = "../l2o_store" }
l2o_store_rocksdb    = { path = "../l2o_store_rocksdb" }
reqwest              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
serde_with           = { workspace = true }
thiserror            = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
