[package]
edition = "2021"
name    = "l2o-indexer-poc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254         = "0.4.0"
ark-ec            = "0.4.2"
ark-groth16       = "0.4.0"
ark-serialize     = { version = "0.4.2", features = ["derive"] }
ark-snark         = "0.4.0"
bytes             = "1"
chainhook-sdk     = "0.12.6"
hex               = "0.4.3"
http-body-util    = "0.1"
hyper             = { version = "1", features = ["full"] }
hyper-util        = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.1.1"
serde             = { version = "1.0.193", features = ["derive"] }
serde_json        = "1.0"
serde_with        = { version = "3.4.0", features = ["hex"] }
tokio             = { version = "1", features = ["full"] }
