[package]
edition = "2021"
name    = "l2o_ord"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
bigdecimal  = { workspace = true }
bitcoin     = { workspace = true }
brotli      = { workspace = true }
ciborium    = { workspace = true }
clap        = { workspace = true }
http        = { workspace = true }
lazy_static = { workspace = true }
mp4         = { workspace = true }
once_cell   = { workspace = true }
redb        = { workspace = true }
regex       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
strum       = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
derive_more = { workspace = true }
