[package]
edition = "2021"
name    = "l2o_ord_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow          = { workspace = true }
ark-bn254       = { workspace = true }
ark-groth16     = { workspace = true }
ark-serialize   = { workspace = true }
ark-snark       = { workspace = true }
bigdecimal      = { workspace = true }
bitcoin         = { workspace = true }
bitcoincore-rpc = { workspace = true }
l2o_common      = { path = "../l2o_common" }
l2o_crypto      = { path = "../l2o_crypto" }
l2o_macros      = { path = "../l2o_macros" }
l2o_ord         = { path = "../l2o_ord" }
l2o_store       = { path = "../l2o_store" }
l2o_store_redb  = { path = "../l2o_store_redb" }
rayon           = { workspace = true }
redb            = { workspace = true }
rmp-serde       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_with      = { workspace = true }
tracing         = { workspace = true }
