[package]
edition = "2021"
name    = "l2o_rpc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin    = { workspace = true }
l2o_ord    = { path = "../l2o_ord" }
serde      = { workspace = true }
serde_json = { workspace = true }
