[package]
edition = "2021"
name    = "l2o_rpc_provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
l2o_common  = { path = "../l2o_common" }
l2o_crypto  = { path = "../l2o_crypto" }
l2o_macros  = { path = "../l2o_macros" }
l2o_ord     = { path = "../l2o_ord" }
l2o_rpc     = { path = "../l2o_rpc" }
reqwest     = { workspace = true }
serde_json  = { workspace = true }
