[package]
edition = "2021"
name    = "l2o_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = { workspace = true }
kvq        = { path = "../kvq" }
l2o_common = { path = "../l2o_common" }
l2o_crypto = { path = "../l2o_crypto" }
l2o_macros = { path = "../l2o_macros" }
l2o_ord    = { path = "../l2o_ord" }
