[package]
edition = "2021"
name    = "l2o_store_rocksdb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.75"
kvq     = { path = "../kvq" }
rocksdb = { version = "0.21.0", features = ["serde", "multi-threaded-cf"] }
