[package]
edition = "2021"
name    = "l2o_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror          = "1.0.50"
tracing            = "0.1.40"
tracing-log        = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
